<resources>
    <string name="app_name">Bolão ZMS</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Classificação</string>
    <string name="title_profile">Perfil</string>

    <string name="sign_up_name">Nome</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Senha</string>
    <string name="sign_up">Criar conta</string>
    <string name="sign_up_has_account">Já tem conta?</string>
    <string name="sign_in">Entrar</string>

    <string name="error_required_fields">Campos obrigatórios não preenchidos</string>
    <string name="error_user_password_invalid">Usuário e/ou senha inválidos</string>
    <string name="unknown_error">Erro desconhecido, tente novamente</string>
    <string name="error_password_too_weak">Senha muito pequena, precisa ter no mínimo 6 caracteres</string>
    <string name="error_email_invalid">Email inválido ou mal formatado, verifique</string>
    <string name="error_user_already_registered">Já existe um usuário cadastrado com esse email, faça login ou recupere sua senha</string>
    <string name="error_email_not_found">Email não encontrado, operação cancelada</string>
    <string name="error_default">Não foi possível completar sua ação. Tente novamente mais tarde</string>

    <string name="sign_in_dont_have_account">Não tem conta?</string>
    <string name="sign_in_forgot_password">Esqueceu a senha?</string>
    <string name="label_first_place">1º Lugar:</string>
    <string name="label_second_place">2º Lugar:</string>

    <string name="group_a">Grupo A</string>
    <string name="group_b">Grupo B</string>
    <string name="group_c">Grupo C</string>
    <string name="group_d">Grupo D</string>
    <string name="group_e">Grupo E</string>
    <string name="group_f">Grupo F</string>
    <string name="group_g">Grupo G</string>
    <string name="group_h">Grupo H</string>

    <string name="info_leaderboard_screen">Esta tela estará disponível após o término da fase de grupos</string>

    <string name="do_you_really_want_logout">Deseja realmente sair?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="profile_logout">Sair</string>
    <string name="title_share">Compartilhar</string>
    <string name="share">Compartilhar aposta</string>
    <string name="generate_screenshot">Gerando screenshot…</string>

    <integer-array name="team_icon_array">
        <item>@drawable/ic_russia</item>
        <item>@drawable/ic_saudi_arabia</item>
        <item>@drawable/ic_egypt</item>
        <item>@drawable/ic_uruguay</item>

        <item>@drawable/ic_portugal</item>
        <item>@drawable/ic_spain</item>
        <item>@drawable/ic_morocco</item>
        <item>@drawable/ic_iran</item>

        <item>@drawable/ic_france</item>
        <item>@drawable/ic_australia</item>
        <item>@drawable/ic_peru</item>
        <item>@drawable/ic_denmark</item>

        <item>@drawable/ic_argentina</item>
        <item>@drawable/ic_iceland</item>
        <item>@drawable/ic_croatia</item>
        <item>@drawable/ic_nigeria</item>

        <item>@drawable/ic_brazil</item>
        <item>@drawable/ic_switzerland</item>
        <item>@drawable/ic_costa_rica</item>
        <item>@drawable/ic_serbia</item>

        <item>@drawable/ic_germany</item>
        <item>@drawable/ic_mexico</item>
        <item>@drawable/ic_sweden</item>
        <item>@drawable/ic_south_korea</item>

        <item>@drawable/ic_belgium</item>
        <item>@drawable/ic_panama</item>
        <item>@drawable/ic_tunisia</item>
        <item>@drawable/ic_england</item>

        <item>@drawable/ic_poland</item>
        <item>@drawable/ic_senegal</item>
        <item>@drawable/ic_colombia</item>
        <item>@drawable/ic_japan</item>
    </integer-array>

    <string-array name="team_name_array">
        <item>Rússia</item>
        <item>Arábia Saudita</item>
        <item>Egito</item>
        <item>Uruguai</item>

        <item>Portugal</item>
        <item>Espanha</item>
        <item>Marrocos</item>
        <item>Irã</item>

        <item>França</item>
        <item>Austrália</item>
        <item>Peru</item>
        <item>Dinamarca</item>

        <item>Argentina</item>
        <item>Islândia</item>
        <item>Croácia</item>
        <item>Nigéria</item>

        <item>Brasil</item>
        <item>Suíça</item>
        <item>Costa Rica</item>
        <item>Sérvia</item>

        <item>Alemanha</item>
        <item>México</item>
        <item>Suécia</item>
        <item>Coreia do Sul</item>

        <item>Bélgica</item>
        <item>Panamá</item>
        <item>Tunísia</item>
        <item>Inglaterra</item>

        <item>Polônia</item>
        <item>Senegal</item>
        <item>Colômbia</item>
        <item>Japão</item>
    </string-array>
</resources>
