<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ProfileFragment"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:layout_height="wrap_content">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@android:color/white"
                    android:text="@string/title_profile"
                    android:textAllCaps="true"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_title" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="15dp"
            android:overScrollMode="never"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingBottom="8dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="8dp"
                        app:srcCompat="@drawable/account_circle_white" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/sign_up_email"
                            android:textAllCaps="true"
                            android:textSize="12sp" />

                        <EditText
                            android:id="@+id/emailEdit"
                            android:enabled="false"
                            style="@style/Widget.EditForm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_logout"
                    style="@style/Widget.ButtonRed"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
